marketing/products/zenith/deploy/k8s/overlays/staging/patch-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zenith-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - zenith.nafuralabs.staging
      secretName: nafura-staging-tls
