marketing/products/zenith/deploy/k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zenith-ingress
spec:
  rules:
    - host: zenith.nafuralabs.staging
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zenith-web
                port:
                  number: 80
